--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -10,12 +10,19 @@ contentDir = "content"  # Define a pasta base para conteúdo
   [languages.en]
     languageName = "English"
     weight = 1
+    disabled = false
+    languageCode = "en"
+    #title = "impossibilis"
     contentDir = "content/en"  # Conteúdo em inglês
     [languages.en.params]
       logo = "img/logo.svg"
       disableTextInHeader = true
       description = "Tabletop and card games producer and publisher."
       keywords = ["tabletop games", "board games", "card games", "impossibilis"]
+      displayName = "EN"
+      isoCode = "en"
+      rtl = false
+      dateFormat = "2 January 2006"
     [languages.en.menu]
       [[languages.en.menu.main]]
         name = "About"
@@ -35,14 +42,25 @@ contentDir = "content"  # Define a pasta base para conteúdo
         weight = 40
 
   [languages.pt]
+    disabled = false
+    languageCode = "pt"
     languageName = "Português"
     weight = 2
+    #title = "Português"
     contentDir = "content/pt"  # Conteúdo em português
     [languages.pt.params]
       logo = "img/logo.svg"
       disableTextInHeader = true
       description = "Produtora e editora de jogos de tabuleiro e cartas."
       keywords = ["jogos de tabuleiro", "jogos de cartas", "impossibilis"]
+      displayName = "PT"
+      isoCode = "pt"
+      rtl = false
+      dateFormat = "2 January 2006"
+      # logo = "img/logo.png"
+      # secondaryLogo = "img/secondary-logo.png"
+      # description = "My awesome website"
+      # copyright = "Copy, _right?_ :thinking_face:"
     [languages.pt.menu]
       [[languages.pt.menu.main]]
         name = "Acerca"
