Atualiza mais uma vez 1

--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -1,6 +1,6 @@
 baseURL = "https://phrazao.github.io/ifi/"
 title = "impossibilis"
-#theme = "blowfish"
+theme = "blowfish"
 colorScheme = "ocean"
 
 defaultContentLanguage = "en"
