--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -79,6 +79,8 @@ disableLanguages = ["pt-PT", "pt-BR"]
  [params]
   header.layout = "fixed-fill-blur"
   description = "impossibilis - Tabletop Games Producer and Publisher"
+  defaultBackgroundImage = "Gemini_Generated_Image_gqbiilgqbiilgqbi.jpeg"
+  defaultFeaturedImage = "Gemini_Generated_Image_cwf9j3cwf9j3cwf9.jpeg"
   highlightCurrentMenuArea = true
   enableThemeToggle = true
   defaultTheme = "auto"
@@ -89,6 +91,21 @@ disableLanguages = ["pt-PT", "pt-BR"]
   disableTextInHeader = true
   showLanguageSwitcher = true
   customCSS = ["css/custom.css"]  # Adiciona o CSS personalizado
+  author.name = "impossibilis"
+  author.image = "Símbolo_cores.png"
+   [homepage]
+    #layout = "profile"
+    layout = "background"
+    defaultBackgroundImage = "Gemini_Generated_Image_gqbiilgqbiilgqbi.jpeg"
+    defaultFeaturedImage = "Gemini_Generated_Image_cwf9j3cwf9j3cwf9.jpeg"
+    showRecent = false
+    showRecentItems = 5
+    showMoreLink = false
+    showMoreLinkDest = "/posts/"
+    cardView = false
+    cardViewScreenWidth = false
+    layoutBackgroundBlur = false
+    disableHeroImageFilter = false
 
   [params.footer]
     showCopyright = true
